# ph_neural_networks

./: CMakeLists.txt
include/ph_neural_networks/: neural_networks.hpp
src/: CMakeLists.txt  neural_networks.cpp
tests/: test_neural_networks.cpp
tests/include/: test_neural_networks.hpp
